<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <!-- FrameLayout to stack ImageView and LinearLayout -->
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="1">

        <!-- Image at the top (20% of the screen height) -->
        <ImageView
            android:contentDescription="@string/app_logo"
            android:id="@+id/top_image"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cat_login"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/login_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.3" />

        <!-- Rounded rectangle container -->
        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:background="@drawable/rounded_rectangle_bg"
            android:elevation="10dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">


            <ImageView
                android:contentDescription="@string/app_logo"
                android:id="@+id/imageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitCenter"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/logo"
                />
            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro"
                android:layout_marginBottom="75dp"
                android:text="@string/login"
                android:textColor="#000000"
                android:textSize="34sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/usernameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sf_pro"
                android:text="@string/username"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!-- Username field with TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field"
                android:fontFamily="@font/sf_pro"
                app:hintEnabled="false"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro"
                    android:hint="@string/username"
                    android:textSize="18sp"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Error message for username -->
            <TextView
                android:id="@+id/username_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_message_for_username"
                android:fontFamily="@font/sf_pro"
                android:textColor="#ff0000"
                android:visibility="gone" />
            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="@font/sf_pro"
                android:text="@string/password"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />
            <!-- Password field with TextInputLayout -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/text_field"
                android:fontFamily="@font/sf_pro"
                app:hintEnabled="false"
                android:layout_marginBottom="8dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textSize="18sp"
                    android:fontFamily="@font/sf_pro"
                    android:inputType="textPassword"
                    android:padding="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Error message for password -->
            <TextView
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_message_for_password"
                android:fontFamily="@font/sf_pro"
                android:textColor="#ff0000"
                android:visibility="gone" />

            <!-- Login button -->
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/sf_pro"
                android:textSize="18sp"
                android:text="@string/login"
                app:backgroundTint="@color/old_orange" />


            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:fontFamily="@font/sf_pro"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="13sp"
                android:text="@string/desc_copyright"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>